--- a/src/content/project/clean-drink.mdx
+++ b/src/content/project/clean-drink.mdx
@@ -1,4 +1,9 @@
 ---
 projectName: Clean Drink
-description: 
+description:
+videoPath:
+url: cleandrink
+rainbow: true
+triColor: false
+purple: false
 ---
