--- a/src/content/project/stahlauf.mdx
+++ b/src/content/project/stahlauf.mdx
@@ -1,4 +1,9 @@
 ---
-projectName: stahla uf
+projectName: Stahla Uf
 description: 
+videoPath:
+url: stahlauf
+rainbow: false
+triColor: false
+purple: true
 ---
