videoplayer med mer

--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -1,10 +1,11 @@
 ---
 projectName: Engo Uf
-description: 
-videoPath: 858377870 
-url: engouf
+description:
+vimeoPath: 858377870
+videoPath: engoUf
+path: engouf
 rainbow: false
 triColor: true
 purple: false
-
+mobile: false
 ---
