--- a/src/content/project/stahlauf.mdx
+++ b/src/content/project/stahlauf.mdx
@@ -1,9 +1,11 @@
 ---
 projectName: Stahla Uf
 description: 
-videoPath:
-url: stahlauf
+vimeoPath: 858377940
+videoPath: cleanDrink
+path: stahlauf
 rainbow: false
 triColor: false
 purple: true
+mobile: true
 ---
