--- a/src/content/project/clean-drink.mdx
+++ b/src/content/project/clean-drink.mdx
@@ -1,9 +1,11 @@
 ---
 projectName: Clean Drink
 description:
-videoPath: 858377940
-url: cleandrink
+vimeoPath: 858377940
+videoPath: cleanDrink
+path: cleandrink
 rainbow: true
 triColor: false
 purple: false
+mobile: true
 ---
