--- a/src/content/project/stahlauf.mdx
+++ b/src/content/project/stahlauf.mdx
@@ -2,7 +2,7 @@
 projectName: Stahla Uf
 description: 
 vimeoPath: 862903788
-videoPath: cleanDrink
+videoPath: stahlaUf
 path: stahlauf
 rainbow: false
 triColor: false
