--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -1,13 +1,15 @@
 ---
+order: 3
 projectName: Engo Uf
 description:
 vimeoPath: 858377870
 videoPath: engoUf
 path: engouf
-rainbow: false
-triColor: true
-purple: false
-mobile: false
+projectStyle: engoUf
 imagePath: /images/engothumbnail.webp
-
+bg1: bg-[#FFFFFF]
+bg2: bg-[#AF653B]
+bg3: bg-[#292828]
+rotation: rotate45Right
+lineSpacing: angled
 ---
