--- a/src/content/project/stahlauf.mdx
+++ b/src/content/project/stahlauf.mdx
@@ -1,12 +1,16 @@
 ---
+order: 4
 projectName: Stahla Uf
 description: 
 vimeoPath: 862903788
 videoPath: stahlaUf
 path: stahlauf
-rainbow: false
-triColor: false
-purple: true
-mobile: true
+projectStyle: stahlaUf
+mobile: true    
 imagePath: /images/stahlathumbnail.webp
+bg1: bg-[#F24134]
+bg2: bg-[#EC6F13]
+bg3: bg-[#363533]
+rotation: level
+lineSpacing: horizontal
 ---
