--- a/src/content/project/freshSoda.mdx
+++ b/src/content/project/freshSoda.mdx
@@ -3,7 +3,7 @@ order: 2
 projectName: Fresh Soda
 description: 
 vimeoPath: 883697659
-videoPath: stahlaUf
+videoPath: freshSoda
 path: freshsoda
 projectStyle: freshSoda
 mobile: true
