--- a/src/content/project/raspberry.mdx
+++ b/src/content/project/raspberry.mdx
@@ -3,8 +3,8 @@ order: 1
 projectName: Raspberry
 description:
 vimeoPath: 883697919
-videoPath: cleanDrink
-path: cleandrink
+videoPath: raspberry
+path: raspberry
 mobile: true
 projectStyle: raspberry
 imagePath: /images/cleanthumbnail.webp
