nya bilder till projekten

--- a/src/content/project/freshSoda.mdx
+++ b/src/content/project/freshSoda.mdx
@@ -7,7 +7,7 @@ videoPath: freshSoda
 path: freshsoda
 projectStyle: freshSoda
 mobile: true
-imagePath: /images/stahlathumbnail.webp
+imagePath: /images/fresh.webp
 bg1: bg-[#FFD600]
 bg2: bg-[#72FCE9]
 bg3: bg-[#B8F827]
