--- a/src/content/project/raspberry.mdx
+++ b/src/content/project/raspberry.mdx
@@ -7,7 +7,7 @@ videoPath: raspberry
 path: raspberry
 mobile: true
 projectStyle: raspberry
-imagePath: /images/cleanthumbnail.webp
+imagePath: /images/raspberry.webp
 bg1: bg-[#F68ECE]
 bg2: bg-[#F33239]
 bg3: bg-[#F68ECE]
