--- a/src/content/project/stahlauf.mdx
+++ b/src/content/project/stahlauf.mdx
@@ -7,7 +7,7 @@ videoPath: stahlaUf
 path: stahlauf
 projectStyle: stahlaUf
 mobile: true    
-imagePath: /images/stahlathumbnail.webp
+imagePath: /images/stahla.webp
 bg1: bg-[#F24134]
 bg2: bg-[#EC6F13]
 bg3: bg-[#363533]
