new content, new page

--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -1,9 +1,9 @@
 ---
-order: 3
+order: 4
 projectName: Engo Uf
 description:
-vimeoPath: 858377870
-videoPath: engoUf
+homePage: true
+videoPath: 8a1b38a2-2440-43c1-b2ab-c4a5e57c5bbb-xirmq.mov
 path: engouf
 projectStyle: engoUf
 imagePath: /images/engothumbnail.webp
