--- a/src/content/project/pinkgrape.mdx
+++ b/src/content/project/pinkgrape.mdx
@@ -1,17 +1,16 @@
 ---
-order: 1
+order: 3
 projectName: Pink Grape
 description:
-vimeoPath: 883697919
-videoPath: raspberry
+homePage: true
+videoPath: 615b1b1a-8a7f-4b1d-a479-d1f93b236674-48x9ij.mov
 path: pinkgrape
 mobile: true
 projectStyle: pinkgrape
 imagePath: /images/pinkgrape.webp
-bg1: bg-[#F68ECE]
-bg2: bg-[#F33239]
-bg3: bg-[#F68ECE]
+bg1: bg-cyan-300
+bg2: bg-fuchsia-300
+bg3: bg-orange-300
 rotation: rotate45Right
 lineSpacing: angled
-
 ---
