--- a/src/content/project/raspberry.mdx
+++ b/src/content/project/raspberry.mdx
@@ -2,8 +2,8 @@
 order: 1
 projectName: Raspberry
 description:
-vimeoPath: 883697919
-videoPath: raspberry
+homePage: false
+videoPath: 8a1b38a2-2440-43c1-b2ab-c4a5e57c5bbb-xirmq.mov
 path: raspberry
 mobile: true
 projectStyle: raspberry
@@ -13,5 +13,5 @@ bg2: bg-[#F33239]
 bg3: bg-[#F68ECE]
 rotation: rotate45Right
 lineSpacing: angled
-
+deprecated: true
 ---
