--- a/src/content/project/freshSoda.mdx
+++ b/src/content/project/freshSoda.mdx
@@ -1,9 +1,9 @@
 ---
 order: 2
 projectName: Fresh Soda
-description: 
-vimeoPath: 883697659
-videoPath: freshSoda
+description:
+homePage: false
+videoPath: 8a1b38a2-2440-43c1-b2ab-c4a5e57c5bbb-xirmq.mov
 path: freshsoda
 projectStyle: freshSoda
 mobile: true
@@ -13,4 +13,5 @@ bg2: bg-[#72FCE9]
 bg3: bg-[#B8F827]
 rotation: level
 lineSpacing: horizontal
+deprecated: true
 ---
