Video updates, about me updates

--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -10,6 +10,6 @@ imagePath: /images/engothumbnail.webp
 bg1: bg-[#FFFFFF]
 bg2: bg-[#AF653B]
 bg3: bg-[#292828]
-rotation: rotate45Right
+rotation: rotate45Left
 lineSpacing: angled
 ---
