--- a/src/content/project/vaknavibbar.mdx
+++ b/src/content/project/vaknavibbar.mdx
@@ -3,7 +3,7 @@ order: 5
 projectName: Vakna Vibbar
 description:
 homePage: false
-videoPath: 10afd343-e412-4b27-b4fe-5a3006f3bef6-exsnnn.mov
+videoPath: a3194379-064d-40cd-a2f9-78c09d5fa3ef-onft1l.mp4
 path: vaknavibbar
 mobile: true
 projectStyle: vaknavibbar
