--- a/src/content/project/voir.mdx
+++ b/src/content/project/voir.mdx
@@ -3,7 +3,7 @@ order: 2
 projectName: Voir
 description:
 homePage: true
-videoPath: 8a1b38a2-2440-43c1-b2ab-c4a5e57c5bbb-xirmq.mov
+videoPath: e57b66a7-b090-4b69-98a0-eb22e91140fd-25pcy.mp4
 path: voir
 mobile: true
 projectStyle: voir
@@ -11,6 +11,6 @@ imagePath: /images/voir.webp
 bg1: bg-green-500
 bg2: bg-sky-500
 bg3: bg-amber-900
-rotation: rotate45Right
+rotation: rotate45Left
 lineSpacing: angled
 ---
