--- a/src/content/project/voir2.mdx
+++ b/src/content/project/voir2.mdx
@@ -3,7 +3,7 @@ order: 6
 projectName: Voir
 description:
 homePage: false
-videoPath: 3e386119-65cb-4647-935a-a6f7f1593545-1uwu6o.mov
+videoPath: f3ce1d8b-7bf3-431a-8864-564f1d05342a-1uwu6o.mp4
 path: voir2
 mobile: true
 projectStyle: voir2
@@ -11,6 +11,6 @@ imagePath: /images/voir.webp
 bg1: bg-slate-50
 bg2: bg-green-300
 bg3: bg-yellow-900
-rotation: rotate45Right
+rotation: rotate45Left
 lineSpacing: angled
 ---
