--- a/src/content/project/pinkgrape.mdx
+++ b/src/content/project/pinkgrape.mdx
@@ -3,7 +3,7 @@ order: 3
 projectName: Pink Grape
 description:
 homePage: true
-videoPath: 615b1b1a-8a7f-4b1d-a479-d1f93b236674-48x9ij.mov
+videoPath: 08148303-1d54-4172-9538-317f33f53ff4-48x9ij.mp4
 path: pinkgrape
 mobile: true
 projectStyle: pinkgrape
