--- a/src/content/project/bicycle.mdx
+++ b/src/content/project/bicycle.mdx
@@ -7,7 +7,7 @@ videoPath: ca4e4858-59b1-41ad-b804-6316068a8c01-1y4001.mp4
 path: bicycle
 mobile: true
 projectStyle: bicycle
-imagePath: /images/pinkgrape.webp
+imagePath: /images/bicycle.webp
 bg1: bg-red-700
 bg2: bg-orange-600
 bg3: bg-stone-950
