--- a/src/content/project/voir.mdx
+++ b/src/content/project/voir.mdx
@@ -7,7 +7,7 @@ videoPath: e57b66a7-b090-4b69-98a0-eb22e91140fd-25pcy.mp4
 path: voir
 mobile: true
 projectStyle: voir
-imagePath: /images/voir.webp
+imagePath: /images/voir-thumb.webp
 bg1: bg-green-500
 bg2: bg-sky-500
 bg3: bg-amber-900
