--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -6,7 +6,7 @@ homePage: true
 videoPath: 5a6d0ffc-ef9a-4cd8-bf3f-aa10f936dbe1-1utsh.mp4
 path: engouf
 projectStyle: engoUf
-imagePath: /images/engothumbnail.webp
+imagePath: /images/engo.png
 bg1: bg-[#FFFFFF]
 bg2: bg-[#AF653B]
 bg3: bg-[#292828]
