--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -3,10 +3,10 @@ order: 4
 projectName: Engo Uf
 description:
 homePage: true
-videoPath: 5a6d0ffc-ef9a-4cd8-bf3f-aa10f936dbe1-1utsh.mp4
+videoPath: VHEXIRgNlD3OaTt4njchVvXNktf5Js9nmrypICaxcdG4WT1U.mp4
 path: engouf
 projectStyle: engoUf
-imagePath: /images/engo.png
+imagePath: /images/engo.webp
 bg1: bg-[#FFFFFF]
 bg2: bg-[#AF653B]
 bg3: bg-[#292828]
