engo url movie fix

--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -3,7 +3,7 @@ order: 4
 projectName: Engo Uf
 description:
 homePage: true
-videoPath: VHEXIRgNlD3OaTt4njchVvXNktf5Js9nmrypICaxcdG4WT1U.mp4
+videoPath: VHEXIRgNlD3OaTt4njchVvXNktf5Js9nmrypICaxcdG4WT1U
 path: engouf
 projectStyle: engoUf
 imagePath: /images/engo.webp
