update images to point to r2

--- a/src/content/project/bicycle.mdx
+++ b/src/content/project/bicycle.mdx
@@ -3,7 +3,7 @@ order: 1
 projectName: Bicycle
 description:
 homePage: true
-videoPath: ca4e4858-59b1-41ad-b804-6316068a8c01-1y4001.mp4
+videoPath: videos/bicycle.mp4
 path: bicycle
 mobile: true
 projectStyle: bicycle
