--- a/src/content/project/engouf.mdx
+++ b/src/content/project/engouf.mdx
@@ -3,8 +3,9 @@ order: 4
 projectName: Engo Uf
 description:
 homePage: true
-videoPath: VHEXIRgNlD3OaTt4njchVvXNktf5Js9nmrypICaxcdG4WT1U
+videoPath: videos/engo.mp4
 path: engouf
+mobile: false
 projectStyle: engoUf
 imagePath: /images/engo.webp
 bg1: bg-[#FFFFFF]
