--- a/src/content/project/raspberry.mdx
+++ b/src/content/project/raspberry.mdx
@@ -3,7 +3,7 @@ order: 1
 projectName: Raspberry
 description:
 homePage: false
-videoPath: 8a1b38a2-2440-43c1-b2ab-c4a5e57c5bbb-xirmq.mov
+videoPath: videos/raspberry.mp4
 path: raspberry
 mobile: true
 projectStyle: raspberry
