--- a/src/content/project/voir.mdx
+++ b/src/content/project/voir.mdx
@@ -3,7 +3,7 @@ order: 2
 projectName: Voir
 description:
 homePage: true
-videoPath: e57b66a7-b090-4b69-98a0-eb22e91140fd-25pcy.mp4
+videoPath: videos/voir-ny.mp4
 path: voir
 mobile: true
 projectStyle: voir
