--- a/src/content/project/voir2.mdx
+++ b/src/content/project/voir2.mdx
@@ -3,7 +3,7 @@ order: 6
 projectName: Voir
 description:
 homePage: false
-videoPath: f3ce1d8b-7bf3-431a-8864-564f1d05342a-1uwu6o.mp4
+videoPath: videos/voir2.mp4
 path: voir2
 mobile: true
 projectStyle: voir2
